@@ -1,3 +1,4 @@
+Equality Lab: Made representation control panels 20% smaller
 Equality Lab: Added scaled number line representation
 Intro: Fixed: Number line should respect the user-selected max
 Equality Lab: Added scaled water glasses representation
